package ucf.assignments;

import java.util.ArrayList;

public class ProductModel {
    private ArrayList<Product> ListOfProducts;

    public ArrayList<Product> getListOfProducts() {
        return ListOfProducts;
    }

    public void AddItem(Product newProduct){
        //add item to the array list
    }

    public void RemoveItem(int Index){

    }
}
