@startuml

class InventoryTracker{
    start()
    main()
}

'Lecture 7/12/2021
class SceneManager{
    scenes: Map<String, Scene>

    load()
    getScene(String): Scene
}

class InventoryTrackerController{
    items: ProductModel

    'constructor for sceneManager
    InventoryTrackerController(ProductModel, SceneManager)


    'VBOX Right
    'pass addItem scene to SceneManager
    addItemButtonClicked(EventHandler)

    'might not be button, may just edit in table view
    editItemButtonClicked(EventHandler)

    'remove selected item
    removeItemButtonClicked(EventHandler)

    editItem()
    SaveAsClicked();

    CloseProgramOptionClicked(EventHandler)
}
class AddItemWindowController{
    'constructor for sceneManager
    AddItemWindowController(ProductModel, SceneManager)

    'instances
    -sceneManager
    -ProductModel

    -textField: name
    -textField: serialNumber
    -textField: value

    'add product through constructor using text field
     addProduct(String, String, BigDecimal)
}

'this may be removed if its possible to edit in tableview
class EditItemWindowController{

}

class SearchItemWindowController{
}

class ProductModel{

    - ObservableList<Product>

}

class Product{
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName()
    + setName()
    + nameProperty()
    + getSerialNumber()
    '...
}

class FileManager{
    -ProductModel

    saveAsCSV(filename: String, data,: String)
    saveAsJSON(filename: String, data,: String)
    saveAsHTML(filename: String, data,: String)
}
openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- SceneManager
SceneManager -- InventoryTrackerController
SceneManager -- AddItemWindowController
SceneManager -- EditItemWindowController
SceneManager -- RemoveItemWindowController
SceneManager -- SearchItemWindowController
MainWindowController o-- ProductModel
AddItemWindowController o-- ProductModel
EditItemWindowController o-- ProductModel
RemoveItemWindowController o-- ProductModel
SearchItemWindowController o-- ProductModel
MainWindowController o-- FileManager
ProductModel *-- Product
@enduml